--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 #buttonArea {
 	border: 1px solid black;
+	padding: 10px;
 }
 
 #addButton {
 	border: 1px solid black;
+	padding: 10px;
 }
 
 #gifsAndRatings {
@@ -16,4 +18,12 @@ body {
 
 .container {
 	background-color: #af8254;
+}
+
+.gif {
+	margin: 10px;
+}
+
+.dynamicBtn {
+	margin-left: 5px;
 }
